--- a/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleEntry.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleEntry.storyboard
@@ -10,14 +10,13 @@
         <!--Survey Life Style EntryVC-->
         <scene sceneID="n1a-i9-LZE">
             <objects>
-                <viewController id="P7I-hp-eiF" customClass="SurveyLifeStyleEntryVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SurveyLifeStyleEntryVC" id="P7I-hp-eiF" customClass="SurveyLifeStyleEntryVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fuw-al-FDS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gkd-PY-DJW">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="gkd-PY-DJW">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="0.51372549020000002" green="0.80000000000000004" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xjy-OH-M29">
                                 <rect key="frame" x="62.5" y="107" width="250" height="25.5"/>
@@ -64,6 +63,9 @@
                                 <state key="normal" title="다음">
                                     <color key="titleColor" red="0.074509803921568626" green="0.6470588235294118" blue="0.6588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="selectedNextBtn:" destination="P7I-hp-eiF" eventType="touchUpInside" id="tsd-al-Dq6"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -90,4 +92,7 @@
             <point key="canvasLocation" x="-34.399999999999999" y="52.623688155922046"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg" width="375" height="667"/>
+    </resources>
 </document>
